--- a/no-agency-3d-styles.css
+++ b/no-agency-3d-styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: black;
+  background-color: blue;
   margin: 0px;
   font-family: Courier, monospace;
   color: #00ff00;
@@ -35,6 +35,10 @@ body {
   align-items: center; /* align vertical */
 }
 
+.zero-margin {
+	margin: 0.0em;
+}
+
 .logo {
 	padding: 1em;
 }
@@ -49,7 +53,7 @@ body {
 .Grid-cell a {
 	position: relative;
 	text-decoration: none;
-	color: #00ff00;
+	color: blue;
 }
 
 .fullborder {
@@ -60,6 +64,14 @@ body {
 	font-size: 2em;
 	border-top: 0.5px solid #00ff00;
 	border-bottom: 0.5px solid #00ff00;
+}
+
+#info {
+	display: block; 
+	text-align: right; 
+	padding-right: 1em;
+	border-top: 0.5px solid #00ff00;
+	background-color: #F8F8F8;
 }
 
 footer {
@@ -77,9 +89,10 @@ footer p {
 }
 
 header {
-	background-color: #00ff00;
-	color: black;
-	padding: 0.5em;
+	background-color: blue;
+	color: #00ff00;
+	padding: 0.7em;
+	padding-bottom:0;
 	width: 100%;
 }
 
