--- a/no-agency-3d-styles.css
+++ b/no-agency-3d-styles.css
@@ -2,7 +2,7 @@ body {
   background-color: blue;
   margin: 0px;
   font-family: Courier, monospace;
-  color: #00ff00;
+  color: black;
   font-size: 1em;
 }
 
@@ -47,7 +47,7 @@ body {
 .dropbtn {
 	font-family: Courier, monospace;
     background-color: blue;
-    color: #00ff00;
+    color: black;
     border: none;
     cursor: pointer;
     font-size: 1em;
@@ -60,7 +60,7 @@ body {
     display: none;
     position: absolute;
     background-color: blue;
-    color: #00ff00;
+    color: black;
     min-width: 250px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -104,13 +104,13 @@ button {
 }
 
 .fullborder {
-	border: 0.5px solid #00ff00;
+	border: 0.5px solid black;
 }
 
 #selected {
 	font-size: 2em;
-	border-top: 0.5px solid #00ff00;
-	border-bottom: 0.5px solid #00ff00;
+	border-top: 0.5px solid black;
+	border-bottom: 0.5px solid black;
 }
 
 #info {
@@ -118,7 +118,7 @@ button {
 	text-align: right; 
 	padding-right: 1em;
 	padding-top: 1em;
-	border-top: 0.5px solid #00ff00;
+	border-top: 0.5px solid black;
 	background-color: vlue;
 	text-align: center;
 }
@@ -126,7 +126,7 @@ button {
 footer {
 	width: 100%;
 	height: auto;
-	border-top: 0.5px solid #00ff00;
+	border-top: 0.5px solid black;
 }
 footer p {
 	/*border: 0.1px solid red;*/
@@ -139,7 +139,7 @@ footer p {
 
 header {
 	background-color: blue;
-	color: #00ff00;
+	color: black;
 	padding: 0.7em;
 	padding-bottom:0;
 	width: 100%;
