--- a/public/no-agency-3d-styles.css
+++ b/public/no-agency-3d-styles.css
@@ -2,7 +2,7 @@ body {
   background-color: white;
   margin: 0px;
   font-family: 'Prestige Elite Std', Courier, monospace;
-  color: #00ff00;
+  color: black;
   font-size: 1em;
 }
 
@@ -69,7 +69,7 @@ body {
 .dropbtn {
 	font-family: 'Prestige Elite Std', Courier, monospace;
     background-color: white;
-    color: #00ff00;
+    color: black;
     border: none;
     cursor: pointer;
     font-size: 1em;
@@ -82,7 +82,7 @@ body {
     display: none;
     position: absolute;
     background-color: white;
-    color: #00ff00;
+    color: black;
     min-width: 250px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -128,13 +128,13 @@ button {
 }
 
 .fullborder {
-	border: 0.5px solid #00ff00;
+	border: 0.5px solid black;
 }
 
 #selected {
 	font-size: 2em;
-	border-top: 0.5px solid #00ff00;
-	border-bottom: 0.5px solid #00ff00;
+	border-top: 0.5px solid black;
+	border-bottom: 0.5px solid black;
 	padding-top: 0.4em;
 }
 
@@ -143,7 +143,7 @@ button {
 	text-align: right; 
 	padding-right: 1em;
 	padding-top: 1em;
-	border-top: 0.5px solid #00ff00;
+	border-top: 0.5px solid black;
 	background-color: vlue;
 	text-align: center;
 }
@@ -151,7 +151,7 @@ button {
 footer {
 	width: 100%;
 	height: auto;
-	border-top: 0.5px solid #00ff00;
+	border-top: 0.5px solid black;
 }
 footer p {
 	/*border: 0.1px solid red;*/
@@ -164,7 +164,7 @@ footer p {
 
 header {
 	background-color: white;
-	color: #00ff00;
+	color: black;
 	padding: 0.7em;
 	padding-bottom:0;
 	width: 100%;
